<resources>
    <string name="app_name">Georienteering</string>
    <string name="hello_world">Welcome to the world of Georienteering!</string>
    <string name="action_settings">Settings</string>
    <string name="action_save_game">Save game</string>
    <string name="action_create_new_game">Create new game</string>
    <string name="action_load_last_saved_game">Load last saved game</string>
    <string name="action_start_game">Start game</string>
    <string name="action_stop_game">Stop game</string>
    <string name="action_view_game_data">View game data</string>
    <string name="action_license_info">License info</string>
    <string name="action_about_app">About this app</string>
    <string name="map_error_msg">Failed to get GoogleMap handle. Google Play Services APK is not available?</string>
    <string name="network_error_msg">No Internet connection. Possibly in airplane mode?</string>
    <string name="drag_marker_help_msg">Please long press on the marker and drag to the desired position within the map.</string>
    <string name="drag_all_markers_info_msg">Please long press on all control point markers and drag to the desired position within the map.</string>
    <string name="play_mode_info_msg">A game is currently ongoing. Please finish the game before trying this action.</string>
    <string name="prepared_mode_info_msg">A game is already loaded. Please start and finish the game before trying this action.</string>
    <string name="not_in_play_mode_info_msg">A game is currently not ongoing. Please create and start a new game before trying this action.</string>
    <string name="not_in_prepared_mode_info_msg">Please create a new game before trying this action.</string>
    <string name="cannot_recreate_game_in_prepared_mode_info_msg">Cannot load game since the game is already loaded. Please start and finish the game before trying this action.</string>
    <string name="cannot_recreate_game_in_play_mode_info_msg">Cannot load game since a game is ongoing. Please finish the game before trying this action.</string>
    <string name="at_start_point_msg">Start the game when you are ready!</string>
    <string name="found_control_point_msg">You have found control point</string>
    <string name="game_was_won_msg">Congrats! You are a Winner!</string>
    <string name="game_was_won_toast_msg">Nice! You have won the game!</string>
    <string name="game_was_lost_msg">Sorry. You have lost the game.</string>
    <string name="warning_ghost_closing_in_msg">The ghost is coming closer and closer!</string>
    <string name="warning_ghost_closing_in_fast_msg">The ghost is very close to you now!</string>
    <string name="position_display_text">  </string>
    <string name="position_display_no_data_text">No Data</string>
    <string name="position_display_ghost_text_part1">Ghost is </string>
    <string name="position_display_ghost_text_part2"> m behind you</string>
    <string name="display_text_init_mode">Welcome to the world of Georienteering!</string>
    <string name="display_text_create_mode">Please long press and drag the controls</string>
    <string name="display_text_prepared_mode">Please move to the starting point</string>
    <string name="display_text_recreate_prepared_mode">Loading the game&#8230;</string>
    <string name="display_text_play_game_mode">Game is ongoing</string>
    <string name="display_text_recreate_play_game_mode">Welcome back to the game!</string>
    <string name="display_text_stopped_mode">Ready for a new game?</string>
    <string name="about_app_message">
<![CDATA[
This app is a project work done by Pertti Palokangas for the course Android for Java programmers at Linnaeus University 2014.
]]>
	</string>
    <string name="title_activity_create_new_game">Create New Game</string>
    <string name="startpoint">Start point</string>
    <string name="startpoint_use_flag_on_map">Let me place a flag on map for Start point</string>
    <string name="startpoint_use_current_location">Use current location for Start point (requires GPS connection)</string>
    <string name="startpoint_use_edit_fields">Use values from this dialog for Start point</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="controlpoints">Control points</string>
    <string name="num_controls">Number of Control points</string>
    <string name="get_last_known_location_failed">Failed to get last known location. Is GPS or network available?</string>
    <string name="please_select_other_startpoint_location_method">Please select another method to decide your Start point location</string>
    <string name="location_provider_not_enabled">Please enable location services for accurate positioning data</string>
    <string name="location_tracking_start">Started Location Tracking</string>
    <string name="location_tracking_stop">Stopped Location Tracking</string>
    <string name="location_tracking_failed_to_start">Location Tracking failed to start!</string>
    <string name="location_input_error_missing">Missing location value</string>
    <string name="location_input_error_latitude_invalid">
        Invalid latitude. Must be in the range -90 to 90 degrees
    </string>
    <string name="location_input_error_longitude_invalid">
        Invalid longitude. Must be in the range -180 to 180 degrees
    </string>
    <string name="location_input_error_converted_latitude_invalid">
        Invalid latitude. Must be in the range -90 to 90 degrees. Please check your preference settings.
    </string>
    <string name="location_input_error_converted_longitude_invalid">
        Invalid longitude. Must be in the range -180 to 180 degrees. Please check your preference settings.
    </string>
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="done_save_btn">Save</string>
    <string name="maptype_normal">Normal</string>
    <string name="maptype_satellite">Satellite</string>
    <string name="maptype_terrain">Terrain</string>
    <string name="save_dialog_save_game_question">Do you wish to save this game?</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="google_play_services_not_available">Google Play services is not available.</string>
    <string name="connection_error_code">Connection failure error code: %1$d</string>
    <string name="connection_error_disabled">Google Play services is disabled</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid">The version of Google Play services on this device is not authentic</string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">The app is not licensed to the user</string>
    <string name="connection_error_message">Connection failure error message: %1$s</string>
    <string name="connection_error_misconfigured">The application is misconfigured</string>
    <string name="connection_error_missing">Google Play services is missing</string>
    <string name="connection_error_needs_resolution">Additional resolution is required</string>
    <string name="connection_error_network">A network error occurred</string>
    <string name="connection_error_outdated">Google Play services is out of date</string>
    <string name="connection_error_sign_in_required">The user is not signed in</string>
    <string name="connection_error_unknown">An unknown error occurred</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    <string name="add_geofences_result_success">
        Add Geofences: Success GeofenceRequestIds=%1$s
    </string>
    <string name="add_geofences_result_failure">
        Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="add_geofences_already_requested_error">
        Can\'t add geofences, previous request hasn\'t finished.
    </string>
    <string name="remove_geofences_id_failure">
        Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="remove_geofences_already_requested_error">
        Can\'t remove geofences, previous request hasn\'t finished.
    </string>
    <string name="remove_geofences_id_success">
        Removing geofences by request ids succeeded: request ids: %1$s
    </string>
    <string name="remove_geofences_intent_failure">
        Removing all geofences failed: error code %1$d
    </string>
    <string name="add_geofences_intent_success">
        Control points added.
    </string>
    <string name="remove_geofences_intent_success">
        Control points removed.
    </string>
    <string name="connected">Client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="geofence_transition_error_detail">
        Geofence transition error, message %2$s.
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error. Invalid type %1$d in geofences
    </string>
    <string name="geofence_transition_notification_text">
        Click to return to the game
    </string>
    <string name="geofence_transition_entered_notification_title">
        Found control point
    </string>
    <string name="geofence_transition_entered_notification_title_with_id">
        Found control point with id %2$s
    </string>
    <string name="geofence_transition_unknown">Unknown geofence transition</string>
    <string name="geofence_invalid_action">Invalid action received. See error log for details.</string>
    <string name="geofence_invalid_action_detail">Invalid action %1$s received.</string>
    <string name="text_size_pref_title">Text Size</string>
  	<string name="text_size_pref_dlg_title">Choose the text size for list items</string>
  	<string name="difficulty_level_pref_title">Difficulty Level</string>
  	<string name="difficulty_level_pref_dlg_title">Choose the desired difficulty level for the game</string>
  	<string name="latitude_pref_title">Start Point Latitude</string>
  	<string name="latitude_pref_dlg_title">Set the latitude for the desired start and finish point</string>
  	<string name="longitude_pref_title">Start Point Longitude</string>
  	<string name="longitude_pref_dlg_title">Set the longitude for the desired start and finish point</string>
  	<string name="ghost_enabled_pref_title">Ghost Avatar</string>
  	<string name="ghost_enabled_pref_summary">Choose if you want a ghost avatar chasing you in the game</string>
  	<string name="show_route_enabled_pref_title">Route display</string>
  	<string name="show_route_enabled_pref_summary">Choose if you want your route displayed as a red line on the map</string>
  	<string name="hide_found_controls_enabled_pref_title">Control Points display</string>
  	<string name="hide_found_controls_enabled_pref_summary">Choose if you want to hide control points on the map as soon as you find them</string>
    <string name="game_data_heading">Here are the games that you have played</string>
    <string name="heading_dummy">DUMMY</string>
    <string name="heading_date">Date</string>
    <string name="heading_time">Time</string>
    <string name="heading_distance">Distance</string>
    <string name="heading_speed">Speed</string>
    <string name="heading_found">Found</string>
  	<string name="game_icon_description">Game icon</string>
    <string name="date_text">2001/-01/-01</string>
    <string name="name_text">Klasmossen</string>
	<string name="time_text">0:00:00</string>
	<string name="distance_text">0 m</string>
	<string name="speed_text">0.00 m/s</string>
	<string name="found_controls_text">0 of 10</string>
</resources>