<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">  
  <ListPreference
      android:key="difficulty_level_pref_key"
      android:title="@string/difficulty_level_pref_title"
      android:dialogTitle="@string/difficulty_level_pref_dlg_title"
      android:entries="@array/difficulty_level_names"
      android:entryValues="@array/difficulty_level_values"
      android:defaultValue="0" />
  <!-- NOTE: 20150117: Updated defaults to LINNAEUS_UNIVERSITY_LOCATION -->
  <EditTextPreference
      android:key="latitude_pref_key"
      android:title="@string/latitude_pref_title"      
      android:dialogTitle="@string/latitude_pref_dlg_title"
      android:inputType="numberDecimal|numberSigned"
      android:defaultValue="56.88234" />   
  <EditTextPreference
      android:key="longitude_pref_key"
      android:title="@string/longitude_pref_title"      
      android:dialogTitle="@string/longitude_pref_dlg_title"
      android:inputType="numberDecimal|numberSigned"
      android:defaultValue="14.8220" />
  <CheckBoxPreference 
      android:key="ghost_enabled_pref_key"
      android:title="@string/ghost_enabled_pref_title"       
      android:summary="@string/ghost_enabled_pref_summary"      
      android:defaultValue="true" />
  <CheckBoxPreference 
      android:key="show_route_enabled_pref_key"
      android:title="@string/show_route_enabled_pref_title"      
      android:summary="@string/show_route_enabled_pref_summary"
      android:defaultValue="true" />

<!-- Not used in first version  
  <CheckBoxPreference 
      android:key="hide_found_controls_enabled_pref_key
      android:title="@string/hide_found_controls_enabled_pref_title"      
      android:summary="@string/hide_found_controls_enabled_pref_summary"
      android:defaultValue="true" />
-->      
<!-- Not sure if we will use this: 
  <ListPreference
      android:key="text_size_pref_key"
      android:title="@string/text_size_pref_title"
      android:dialogTitle="@string/text_size_pref_dlg_title" 
      android:entries="@array/text_size_names"
      android:entryValues="@array/text_size_values"
      android:defaultValue="medium" />  
-->  	

</PreferenceScreen>