<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >    
        
    <ImageView
	    android:id="@+id/game_icon"
	    android:layout_width="20dp"
	    android:layout_height="20dp"	    
	    android:contentDescription="@string/game_icon_description"
	    android:paddingLeft="2dp"
	    android:paddingRight="2dp"
	    android:paddingTop="2dp"
	    android:src="@drawable/ok" />    
        
	<TextView
		android:id="@+id/date"
    	android:layout_width="70dp"
    	android:layout_height="20dp"
		android:paddingLeft="6dp"
    	android:gravity="center_vertical"
    	android:text="@string/date_text"  
    	android:textColor="@color/MY_BLUE"
		android:textSize="12sp" />

	<TextView
	    android:id="@+id/time"
	    android:layout_width="50dp"
	    android:layout_height="20dp"
	    android:gravity="center_vertical|right"
	    android:paddingLeft="6dp"
	    android:text="@string/time_text"
	    android:textColor="@color/MY_BLUE"
	    android:textSize="12sp" />
	
	<TextView
	    android:id="@+id/distance"
	    android:layout_width="60dp"
	    android:layout_height="20dp"
	    android:gravity="center_vertical|right"
	    android:paddingLeft="6dp"
	    android:text="@string/distance_text"
	    android:textColor="@color/MY_BLUE"
	    android:textSize="12sp" />
<!-- Disabled in v 1 -->
<!--  	
	<TextView
	    android:id="@+id/speed"
	    android:layout_width="65dp"
	    android:layout_height="20dp"
	    android:gravity="center_vertical|left"
	    android:paddingLeft="14dp"
	    android:paddingRight="2dp"
	    android:text="@string/speed_text"
	    android:textColor="@color/MY_BLUE" 
	    android:textSize="12sp" />
-->	
	<TextView
	    android:id="@+id/found_controls"
	    android:layout_width="80dp"
	    android:layout_height="20dp"
	    android:gravity="center_vertical|right"
	    android:paddingLeft="10dp"	    	    
	    android:paddingRight="6dp"
	    android:text="@string/found_controls_text"
	    android:textColor="@color/MY_BLUE"
	    android:textSize="12sp" />
	
</LinearLayout>
