<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    
    android:layout_margin="5dp"
    android:background="@color/MY_BLACK"
    android:orientation="vertical" >

	<TextView
        android:id="@+id/label_startpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startpoint"
        android:textColor="@color/GREEN"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rg_startpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"          
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/rb_use_flag_on_map"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:onClick="onRadioButtonClicked"
            android:textSize="12sp"
            android:text="@string/startpoint_use_flag_on_map"
            android:textColor="@color/YELLOW" />

        <RadioButton
            android:id="@+id/rb_use_current_location"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:onClick="onRadioButtonClicked"
            android:textSize="12sp"
            android:text="@string/startpoint_use_current_location"
            android:textColor="@color/YELLOW" />

        <RadioButton
            android:id="@+id/rb_use_edit_fields"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:onClick="onRadioButtonClicked"
            android:textSize="12sp"
            android:checked="true"
            android:text="@string/startpoint_use_edit_fields"
            android:textColor="@color/YELLOW" />
    </RadioGroup>
    
    <TextView
        android:id="@+id/label_latitude"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:textColor="@color/GREEN"
        android:layout_marginLeft="5dp" 
        android:labelFor="@+id/value_latitude"
        android:text="@string/latitude" />

    <EditText
        android:id="@+id/value_latitude"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/GREY"
        android:layout_marginLeft="5dp"
        android:inputType="numberDecimal|numberSigned" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/label_longitude"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:textColor="@color/GREEN"
        android:layout_marginLeft="5dp" 
        android:labelFor="@+id/value_longitude"
        android:text="@string/longitude" />

    <EditText
        android:id="@+id/value_longitude"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/GREY"
        android:layout_marginLeft="5dp"        
        android:inputType="numberDecimal|numberSigned" >

        <requestFocus />
    </EditText>
<!--  
    <View
        android:id="@+id/divider_horiz1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/DARK_GREY"
        android:minHeight="1dp"
        android:visibility="visible" />
-->

    <TextView
        android:id="@+id/label_controlpoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:textColor="@color/GREEN"
        android:text="@string/controlpoints"
        android:textStyle="bold" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:orientation="horizontal" >
    
    <TextView
        android:id="@+id/label_num_controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:textColor="@color/GREEN"
        android:labelFor="@+id/value_num_controls"
        android:text="@string/num_controls" />  
        
<!-- TODO: Fix alignment/padding -->    
    <Spinner android:id="@+id/value_num_controls"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingLeft="10dp"
       android:background="@color/GREY"
       android:drawSelectorOnTop="false" />
    
    </LinearLayout>
    
    <LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="horizontal" >    
    
    <Button
        android:id="@+id/cancel_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/TRANSP_DARK_RED"
        android:text="@android:string/cancel" />
    
    <Button
        android:id="@+id/ok_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/TRANSP_DARK_GREEN"
        android:text="@android:string/ok" />

	</LinearLayout>

</LinearLayout>
